fix(hud): use mote lighter white on HUD
Former-commit-id: 7007a39e73fb328f81b12317f9abd2e540f109bf

--- a/resources/[soz]/soz-hud/ui/app.css
+++ b/resources/[soz]/soz-hud/ui/app.css
@@ -144,7 +144,7 @@ body {
   text-align: center;
   top: 1.5rem;
   width: 100px;
-  color: #a4a4a4;
+  color: rgba(255, 255, 255, .8);
   text-transform: uppercase;
   font-size: 0.8rem;
 }
