--- a/resources/[soz]/soz-inventory/ui/css/style.css
+++ b/resources/[soz]/soz-inventory/ui/css/style.css
@@ -63,6 +63,13 @@ body {
   box-shadow: inset 0 -.5em 1em rgba(0, 0, 0, .6);
 }
 
+.container > div header > span {
+  float: right;
+  margin-right: 2rem;
+  font-size: .8rem;
+  line-height: 1.2rem;
+}
+
 .container > div section {
   background: rgba(0, 0, 0, .6);
   min-height: 20vh;
