feat(qb-target): update padding for icon
Former-commit-id: 071a40a6f8ed1535d645fd5e7acc5e1d8ad43e06

--- a/resources/[qb]/qb-target/html/css/style.css
+++ b/resources/[qb]/qb-target/html/css/style.css
@@ -44,6 +44,10 @@ body {
 
   border-top-left-radius: .3rem;
   border-bottom-left-radius: .3rem;
-  padding: .5rem 2rem;
+  padding: .5rem 1rem;
   cursor: pointer;
+}
+
+#target-label > div i {
+  padding-right: .5rem;
 }
