--- a/resources/[soz]/soz-hud/ui/app.css
+++ b/resources/[soz]/soz-hud/ui/app.css
@@ -26,20 +26,21 @@ body {
 .statues {
   position: absolute;
   width: 12vw;
-  bottom: 1.2vh;
+  bottom: 1.3rem;
   right: .8vw;
 }
 
 .status {
   display: flex;
   padding: .3rem;
-  margin: .5rem 0;
-  border-radius: 1rem;
+  margin: .3rem 0;
+  border-radius: .3rem;
   background-color: rgba(0, 0, 0, .4);
 }
 
 .status .icon {
-  padding: 0 .5rem;
+  padding-left: .2rem;
+  padding-right: .5rem;
   height: .8rem;
   width: .8rem;
   color: white;
@@ -53,7 +54,7 @@ body {
 .status .progressbar {
   display: flex;
   width: 100%;
-  border-radius: 1rem;
+  border-radius: .15rem;
   overflow: hidden;
 }
 
