--- a/resources/[soz]/soz-inventory/ui/css/style.css
+++ b/resources/[soz]/soz-inventory/ui/css/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 body {
   border: 0;
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Prompt', sans-serif;
   transition: opacity .5s;
 }
 
@@ -58,7 +58,7 @@ body {
   padding: 2rem 0;
   border-top-left-radius: .5rem;
   border-top-right-radius: .5rem;
-  background:url("../img/default.png");
+  background:url("../img/default.png") no-repeat;
   background-size: cover;
   box-shadow: inset 0 -.5em 1em rgba(0, 0, 0, .6);
 }
@@ -68,12 +68,17 @@ body {
   margin-right: 2rem;
   font-size: .8rem;
   line-height: 1.2rem;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 .container > div section {
   background: rgba(0, 0, 0, .6);
-  min-height: 20vh;
-  padding-bottom: 10vh;
+  min-height: 200px;
+  padding: .5rem .5rem 10vh .5rem;
+}
+
+.container > div section > * + * {
+  margin-top: 0.25rem;
 }
 
 /** Inventory Item **/
@@ -82,6 +87,7 @@ body {
   color: white;
   padding: .8rem 2rem;
   margin-bottom: .2rem;
+  border-radius: .3rem;
   cursor: grab;
 }
 .gu-mirror .inv-item {
@@ -89,7 +95,6 @@ body {
 }
 
 .inv-item:hover {
-  font-weight: bold;
   background: rgba(255, 255, 255, .25);
 }
 
