--- a/resources/[soz]/soz-hud/ui/app.css
+++ b/resources/[soz]/soz-hud/ui/app.css
@@ -43,7 +43,7 @@ body {
   padding-right: .5rem;
   height: .8rem;
   width: .8rem;
-  color: white;
+  color: rgba(255, 255, 255, .65);
 }
 
 .status .icon svg {
