--- a/resources/[qb]/progressbar/html/css/style.css
+++ b/resources/[qb]/progressbar/html/css/style.css
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 html {
     overflow: hidden;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Prompt', sans-serif;
 }
 
 body {
@@ -17,10 +18,10 @@ body {
     display: none;
     z-index: 5;
     color: #fff;
-    font-family: 'Poppins', sans-serif;
-    width: 15%;
+    font-family: 'Prompt', sans-serif;
+    width: 20%;
     position: fixed;
-    bottom: 12.65%;
+    bottom: 8.50%;
     left: 0;
     right: 0;
     margin-left: auto;
@@ -30,7 +31,7 @@ body {
 .progress-labels {
     width: 100%;
     height: 4vh;
-    line-height: 4vh;
+    line-height: 3vh;
     text-align: center;
     position: absolute;
     display: inline-block;
@@ -39,30 +40,29 @@ body {
 
 .progress-labels div {
     font-size: 1.3vh;
-    line-height: 4vh;
+    line-height: 3vh;
     position: relative;
     color: #ffffff;
     z-index: 10;
-    font-weight: bold;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Prompt', sans-serif;
 }
 
 .progress-bar-container {
     width: 100%;
-    height: 4vh;
+    height: 3vh;
     background: rgba(0, 0, 0, 0.246);
     text-align: left;
     overflow: hidden;
     position: relative;
     display: block;
     white-space: nowrap;
-    border-radius: 2px;
+    border-radius: 0.3em;
 }
 
 .progress-bar {
-    background-color: #dc143c !important;
+    background-color: #23740C !important;
     width: 0%;
-    height: 4vh;
+    height: 3vh;
     transition: width 0.3s;
     transition-timing-function: ease-out;
 }
