--- a/lib/npwd/phone/src/main.css
+++ b/lib/npwd/phone/src/main.css
@@ -1,6 +1,16 @@
+@font-face {
+    font-family: 'SF-Pro';
+    src: url("../public/fonts/SF-Pro-Text-Medium.otf") format("opentype");
+}
+
+@font-face {
+    font-family: 'SF-Pro';
+    font-weight: 300;
+    src: url("../public/fonts/SF-Pro-Text-Light.otf") format("opentype");
+}
+
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, 'SF-Pro', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 20px;
