--- a/resources/[soz]/soz-inventory/ui/css/style.css
+++ b/resources/[soz]/soz-inventory/ui/css/style.css
@@ -58,7 +58,7 @@ body {
   padding: 2rem 0;
   border-top-left-radius: .5rem;
   border-top-right-radius: .5rem;
-  background:url("../img/default.png") no-repeat;
+  background: url("../img/default.jpg") no-repeat;
   background-size: cover;
   box-shadow: inset 0 -.5em 1em rgba(0, 0, 0, .6);
 }
