feat(phone): global redesign fixes
Former-commit-id: 9b37c0f9ea2bf30c5c751d5ce624d8dbbef1f971

--- a/lib/npwd/phone/src/Phone.css
+++ b/lib/npwd/phone/src/Phone.css
@@ -23,7 +23,7 @@
 .PhoneScreen {
   overflow: hidden;
   position: absolute;
-  background-color: black;
+  background-color: #121212;
   bottom: 100px;
   left: 50px;
   right: 50px;
