feat(phone): use tailwind for phone
Former-commit-id: a3996f3cfd6c90f3840606dbe45a2bc71610759a

--- a/lib/npwd/phone/src/Phone.css
+++ b/lib/npwd/phone/src/Phone.css
@@ -23,7 +23,6 @@
 .PhoneScreen {
   overflow: hidden;
   position: absolute;
-  background-color: #121212;
   bottom: 100px;
   left: 50px;
   right: 50px;
@@ -34,6 +33,15 @@
   background-size: cover;
   background-repeat: no-repeat;
   border-radius: 40px;
+}
+
+.PhoneScreenNoHome:before {
+    content: "";
+    position: absolute;
+    width : 100%;
+    height: 100%;
+    background: inherit;
+    filter: blur(5px);
 }
 
 .PhoneAppContainer {
