feat(phone): apply some little fixes
Former-commit-id: 00526dbb384a56d3c093afdcd65a2b5f34d8efa8

--- a/lib/npwd/phone/src/main.css
+++ b/lib/npwd/phone/src/main.css
@@ -4,7 +4,7 @@
 
 @font-face {
     font-family: 'SF-Pro';
-    src: url("os/fonts/SF-Pro.ttf") format("truetype");
+    src: url("os/fonts/SF-Pro.otf") format("opentype");
 }
 
 body {
