feat(phone): use google font
Former-commit-id: 857dbedb3257f15b0caae8f93cb883a0800aaf0d

--- a/lib/npwd/phone/src/main.css
+++ b/lib/npwd/phone/src/main.css
@@ -1,14 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-    font-family: 'SF-Pro';
-    src: url("os/fonts/SF-Pro.otf") format("opentype");
-}
-
 body {
-  font-family: -apple-system, 'SF-Pro', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 20px;
