feat(phone): setup notifications
Former-commit-id: 20b15c44e7141c01731e5632d47de0d16d6c57f6

--- a/lib/npwd/phone/src/Phone.css
+++ b/lib/npwd/phone/src/Phone.css
@@ -51,6 +51,11 @@
   flex-direction: column;
 }
 
+.notificationBarIcon > * {
+    height: 20px;
+    width: 20px;
+}
+
 * {
   box-sizing: border-box;
 }
