--- a/resources/[soz]/soz-driving-school/ui/driving-school.css
+++ b/resources/[soz]/soz-driving-school/ui/driving-school.css
@@ -1,16 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Prompt:400,500');
 body, html {
-    width: 99%;
-    height: 99%;
+    width: 100%;
+    height: 100%;
     font-family: 'Prompt', sans-serif;
+    margin: 0;
+    padding: 0;
 }
-#wrapper {
+.super-wrapper {
     width: 100%;
     height: 100%;
     display: flex;
+    justify-content: flex-end;
+}
+.wrapper {
+    display: flex;
     flex-direction: column;
-    align-content: center;
-    justify-content: center;
 }
 .container {
     position: relative;
@@ -37,7 +41,7 @@ body, html {
 #right-col {
     display: flex;
     justify-content: space-evenly;
-    height: 88%;
+    height: 87%;
 }
 .items {
     display: flex;
@@ -63,9 +67,11 @@ body, html {
     font-weight: initial;
 }
 .text-bold {
-    font-weight: 500;
+    font-weight: 600;
+}
+.text-center {
+    text-align: center;
 }
 .small-lh {
     line-height: 1rem;
-    font-weight: 600;
 }
