feat(voip): allow player to set radio in specific ear
Former-commit-id: 04dc712b0d9fbfcde220b7d5f084558dd2d33d92

--- a/resources/[soz]/soz-talk/ui/src/components/radio/style.module.css
+++ b/resources/[soz]/soz-talk/ui/src/components/radio/style.module.css
@@ -60,6 +60,14 @@
     width: 1vw;
     composes: action_style;
 }
+.action_mix {
+    position: absolute;
+    bottom: 13.8vh;
+    left: 3.7vw;
+    height: 2vh;
+    width: 1.6vw;
+    composes: action_style;
+}
 
 .action_volume_up {
     position: absolute;
