--- a/resources/[soz]/soz-talk/ui/src/components/screen/style.module.css
+++ b/resources/[soz]/soz-talk/ui/src/components/screen/style.module.css
@@ -19,13 +19,13 @@
 }
 
 .frequency span {
-    font-size: 1.5vh;
+    font-size: 1.2rem;
 }
 
 .frequency input {
     position: relative;
     font-family: 'VT323', sans-serif;
-    font-size: 2.2vh;
+    font-size: 1.5rem;
     background: transparent;
     text-align: right;
     border: none;
@@ -40,7 +40,7 @@
     justify-items: left;
     gap: .5rem;
     padding: 0 .6vw;
-    font-size: 1vh;
+    font-size: 0.8rem;
 }
 
 .meta div {
