--- a/resources/[soz]/soz-loadscreen/assets/style.css
+++ b/resources/[soz]/soz-loadscreen/assets/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300&display=swap');
 
 * {
     user-select: none;
@@ -6,6 +6,7 @@
 
 body {
     font-family: 'Prompt', sans-serif;
+    font-weight: 300;
     overflow: hidden;
     padding: 0;
     margin: 0;
@@ -23,14 +24,22 @@ video {
 
 .info {
     position: absolute;
-    padding: 1vh 1vw;
+    display: flex;
+    align-items: center;
+    padding: .5rem 1rem;
     margin: 1vh 1vw;
     bottom: 0;
     left: 0;
     color: #fff;
-    background: rgba(0,0,0,.25);
+    background: rgba(0,0,0,.5);
     border-radius: .5rem;
+    cursor: pointer;
     z-index: 1;
+}
+
+.info svg {
+    height: 1.5rem;
+    margin-right: .5rem;
 }
 
 @keyframes fadein {
