--- a/resources/[soz]/soz-identity/ui/soz-identity.css
+++ b/resources/[soz]/soz-identity/ui/soz-identity.css
@@ -13,6 +13,12 @@ body, html {
     display: flex;
     justify-content: flex-end;
 }
+#identity {
+    font-size: .85em;
+}
+#licenses {
+    font-size: 1em;
+}
 .wrapper {
     display: flex;
     flex-direction: column;
@@ -32,16 +38,26 @@ body, html {
 .is-half {
     width: 50%;
 }
-#left-col {
+.left-col {
     display: flex;
-    align-items: flex-end;
     justify-content: space-evenly;
     height: auto;
-    padding-bottom: 6.5%;
 }
-#right-col {
+.right-col {
     display: flex;
     justify-content: space-evenly;
+}
+#left-col-identity {}
+#right-col-identity {
+    flex-direction: column;
+    padding-top: 3%;
+    padding-bottom: 4%;
+}
+#left-col-licenses {
+    align-items: flex-end;
+    padding-bottom: 6.5%;
+}
+#right-col-licenses {
     height: 87%;
 }
 .items {
@@ -77,7 +93,7 @@ body, html {
     line-height: 1.2em;
 }
 @media all and (max-width: 1920px) {
-    #bg-img {
+    .bg-img {
         width: 500px;
     }
 }
@@ -85,7 +101,7 @@ body, html {
     body {
         font-size: 1.2em;
     }
-    #bg-img {
+    .bg-img {
         width: 600px;
     }
 }
@@ -93,7 +109,7 @@ body, html {
     body {
         font-size: 2em;
     }
-    #bg-img {
+    .bg-img {
         width: 1000px;
     }
 }
