Finish soz-identity ID card with mugshot
Former-commit-id: 55f43bade231882dcf407f9271b537d168400352

--- a/resources/[soz]/soz-identity/ui/soz-identity.css
+++ b/resources/[soz]/soz-identity/ui/soz-identity.css
@@ -41,13 +41,19 @@ body, html {
 .left-col {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     height: auto;
 }
 .right-col {
     display: flex;
     justify-content: space-evenly;
 }
-#left-col-identity {}
+#left-col-identity img {
+    opacity: 0.95;
+    width: 120px;
+    height: 120px;
+    background-color: black;
+}
 #right-col-identity {
     flex-direction: column;
     padding-top: 3%;
