feat(talk): use new radio endpoint
Former-commit-id: e6b0e11f0a0e64ba1e9dc2678cf49285e64deafa

--- a/resources/[soz]/soz-talk/ui/src/components/radio/cibi.module.css
+++ b/resources/[soz]/soz-talk/ui/src/components/radio/cibi.module.css
@@ -66,6 +66,14 @@
     width: 4.5vw;
     composes: action_style;
 }
+.action_mix {
+    position: absolute;
+    bottom: 2vh;
+    left: 17.45vw;
+    height: 2.2vh;
+    width: 2.6vw;
+    composes: action_style;
+}
 
 .action_volume_up {
     position: absolute;
