feat(police): implement close button on radio
Former-commit-id: 0cbd6a40f9c93328a6752bcfc7b8f867f0f4133a

--- a/resources/[soz]/soz-talk/ui/src/components/radio/cibi.module.css
+++ b/resources/[soz]/soz-talk/ui/src/components/radio/cibi.module.css
@@ -74,6 +74,17 @@
     width: 2.6vw;
     composes: action_style;
 }
+.action_close {
+    position: absolute;
+    bottom: 22vh;
+    left: 39vw;
+    height: .7rem;
+    width: .7rem;
+    color: #fff;
+    background: rgba(0,0,0,.5);
+    border: 1px solid rgba(0,0,0,.6);
+    border-radius: .3rem;
+}
 
 .action_volume_up {
     position: absolute;
