--- a/resources/[soz]/soz-talk/ui/src/components/radio/cibi.module.css
+++ b/resources/[soz]/soz-talk/ui/src/components/radio/cibi.module.css
@@ -81,6 +81,7 @@
     height: .7rem;
     width: .7rem;
     color: #fff;
+    cursor: pointer;
     background: rgba(0,0,0,.5);
     border: 1px solid rgba(0,0,0,.6);
     border-radius: .3rem;
