feat(hud): add notification style
Former-commit-id: 0468e18b3dba5ae5211dc89cfb0254373543a8fe

--- a/resources/[soz]/soz-hud/ui/src/components/hud/notifications/notification/styles.module.css
+++ b/resources/[soz]/soz-hud/ui/src/components/hud/notifications/notification/styles.module.css
@@ -18,7 +18,20 @@
     left: 0;
     width: 4px;
     height: 100%;
-    background: #38bb13;
+    background: #33be1c;
+}
+
+/* Notification type */
+.notification.error::before {
+    background: #f63939;
+}
+
+.notification.warning::before {
+    background: #dc6c27;
+}
+
+.notification.info::before {
+    background: #2d93dc;
 }
 
 .notification * {
