fix(hud): display only one twitch news in a row
Former-commit-id: 4b2b2e51327c9942c42d2d0a3086b067e3424bd9

--- a/resources/[soz]/soz-hud/ui/src/components/newsBanner/banner/styles.module.css
+++ b/resources/[soz]/soz-hud/ui/src/components/newsBanner/banner/styles.module.css
@@ -1,5 +1,6 @@
 .news {
-    position: relative;
+    position: absolute;
+    bottom: 0;
     width: 100%;
     overflow: hidden;
     margin-bottom: .3rem;
