feat(inventory): add icons to drag & drop UI
Former-commit-id: e20ccb9060cd185eac19ecf3b88ae39c20826342

--- a/resources/[soz]/soz-inventory/ui/css/style.css
+++ b/resources/[soz]/soz-inventory/ui/css/style.css
@@ -83,6 +83,7 @@ body {
 
 /** Inventory Item **/
 .inv-item {
+  display: flex;
   font-weight: 300;
   color: white;
   padding: .8rem 2rem;
@@ -96,6 +97,12 @@ body {
 
 .inv-item:hover {
   background: rgba(255, 255, 255, .25);
+}
+
+.inv-item .icon {
+  width: 1rem;
+  height: 1rem;
+  margin-right: .5rem;
 }
 
 .inv-item:hover .tooltip {
