--- a/resources/[soz]/soz-hud/ui/src/components/speedometer/style.module.css
+++ b/resources/[soz]/soz-hud/ui/src/components/speedometer/style.module.css
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: center;
     transition: opacity .5s;
-    filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, .7))
+    filter: drop-shadow(0 0 5px rgba(0, 0, 0, .7))
 }
 
 .speedometer * {
@@ -39,8 +39,8 @@
 }
 
 .icon {
-    width: 18px;
-    height: 18px;
+    width: 1.5rem;
+    height: 1.5rem;
 }
 
 
