--- a/resources/[soz]/soz-inventory/ui/src/components/ContainerInventory/styles.module.css
+++ b/resources/[soz]/soz-inventory/ui/src/components/ContainerInventory/styles.module.css
@@ -19,10 +19,6 @@
     opacity: 0;
 }
 
-.inventory {
-    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-}
-
 .banner {
     user-select: none;
     text-align: center;
@@ -32,37 +28,37 @@
     padding: 2rem 0;
     border-top-left-radius: .5rem;
     border-top-right-radius: .5rem;
-    background: url("../assets/default.jpg") no-repeat;
+    background: url("../../assets/default.jpg") no-repeat;
     background-size: cover;
     box-shadow: inset 0 -.5em 1em rgba(0, 0, 0, .6);
 }
 
 .bin {
-    background: url("../assets/bin.jpg") no-repeat;
+    background: url("../../assets/bin.jpg") no-repeat;
     background-size: cover;
 }
 .boss_storage {
-    background: url("../assets/boss_storage.jpg") no-repeat;
+    background: url("../../assets/boss_storage.jpg") no-repeat;
     background-size: cover;
 }
 .fridge {
-    background: url("../assets/fridge.jpg") no-repeat;
+    background: url("../../assets/fridge.jpg") no-repeat;
     background-size: cover;
 }
 .player {
-    background: url("../assets/player.jpg") no-repeat;
+    background: url("../../assets/player.jpg") no-repeat;
     background-size: cover;
 }
 .seizure {
-    background: url("../assets/seizure.jpg") no-repeat;
+    background: url("../../assets/seizure.jpg") no-repeat;
     background-size: cover;
 }
 .storage {
-    background: url("../assets/storage.jpg") no-repeat;
+    background: url("../../assets/storage.jpg") no-repeat;
     background-size: cover;
 }
 .trunk {
-    background: url("../assets/trunk.jpg") no-repeat;
+    background: url("../../assets/trunk.jpg") no-repeat;
     background-size: cover;
 }
 
@@ -72,14 +68,4 @@
     font-size: .8rem;
     line-height: 1.2rem;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-}
-
-.content {
-    background: rgba(0, 0, 0, .6);
-    min-height: 200px;
-    padding: .5rem .5rem 10vh .5rem;
-}
-
-.content > * + * {
-    margin-top: 0.25rem;
 }
