feat(inventory): add right clock to close menu
Former-commit-id: 783c8c5f98dd605c0e76859e378e9cf1ffd5386c

--- a/resources/[soz]/soz-inventory/ui/src/components/PlayerInventory/styles.module.css
+++ b/resources/[soz]/soz-inventory/ui/src/components/PlayerInventory/styles.module.css
@@ -9,11 +9,13 @@
 .container_show {
     transform: translateY(0);
     opacity: 1;
+    z-index: 10;
 }
 
 .container_hide {
     transform: translateY(-2vw);
     opacity: 0;
+    z-index: 0;
 }
 
 .banner {
